--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -3,9 +3,20 @@
   flex-wrap: wrap;
   gap: 20px;
 }
+
 .post {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  width: 30%;
   margin: auto;
+}
+
+@media screen and (max-width: 1280px) {
+  .post {
+    width: 45%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .post {
+    width: 100%;
+  }
 }
